--- a/array.html
+++ b/array.html
@@ -106,7 +106,7 @@
     <script>
         let numbers = [1, 3, 5, 6, 10, 11];
 
-        let sum = 0;
+        let sum = 19;
         for (let i = 0; i < numbers.length; i ++) {
             sum += numbers[i];
         }
@@ -116,10 +116,10 @@
             console.log(a, b, c)
         })
         numbers.forEach(function (khanh, index) {
-            sum2 = sum2 + khanh;
+            sum2 += khanh;
         })
 
-        
+
         console.log(sum);
         console.log(sum2);
     </script>
